# stock-analyse

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
app/: database.py  dependencies.py  main.py  web.py
app/indicators/: __init__.py  bollinger.py  candlestick.py  ema.py  fibonacci.py  macd.py  obv.py  pivot.py  rsi.py  swing.py
app/models/: schemas.py
app/repositories/: analysis_repo.py  config_repo.py  portfolio_repo.py
app/routers/: analysis.py  config.py  health.py  portfolio.py  stock.py
app/services/: ai_analysis.py  calendar.py  discord.py  indicators.py  scheduler.py  yahoo.py
app/static/: style.css
app/templates/: analysis.html  base.html  config.html  dashboard.html  history.html  login.html  portfolio.html
data/: portfolio.json  system-prompt.md
tests/: conftest.py  test_ai_analysis.py  test_analysis_api.py  test_auth.py  test_calendar.py  test_database.py  test_indicators.py  test_portfolio_api.py  test_stock_api.py  test_web.py
