[project]
name = "automate-stock"
version = "0.2.0"
description = "SET Analyze backend — SET technical analysis + AI signals + Discord delivery"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "exchange-calendars>=4.6",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "litellm>=1.60",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "ta-lib>=0.6.8",
    "uvicorn[standard]>=0.46.0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
